added style sheet

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <title>LMC 3255 Project</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
+<link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -143,8 +143,8 @@
 <div class="w3-content w3-container w3-padding-64" id="portfolio">
     <h3 class="w3-center">I do not know which to prefer,<br>
         The beauty of inflections<br>
-        Or the beauty of innuendoes,
-        The blackbird whistling
+        Or the beauty of innuendoes,<br>
+        The blackbird whistling<br>
         Or just after.<br>
     </h3>
 </div>
