--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
 <link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="fonts.css">
 <link rel="stylesheet" href="morefonts.css">
+<!-- <head>
+    <script src="jQuery.min.js"></script>  
+    <script src="jQuery.scrollSpeed.js"></script>
+    <script>
+    $(function() {
+        jQuery.scrollSpeed(5, 0);
+    });
+    </script>
+</head> -->
 
 <style>
     body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif;}
@@ -15,7 +24,7 @@
     }
 
     /* Create a Parallax Effect */
-    .bgimg-1, .bgimg-2, .bgimg-3, .bgimg-4, .bgimg-5{
+    .bgimg-1, .bgimg-2, .bgimg-3, .bgimg-4, .bgimg-5, .bgimg-6, .bgimg-7 {
         background-attachment: fixed;
         background-position: center;
         background-repeat: no-repeat;
@@ -36,16 +45,28 @@
         background-image: url('images/birdsOfFire.jpg');
     }
     .bgimg-5 {
-        background-image: url('images/birdsOfFire.jpg');
+        background-image: url('images/areOne.jpg');
     }
-
+    .bgimg-6 {
+        background-image: url('images/justAfter.jpg');
+    }
+    .bgimg-7 {
+        background-image: url('images/menOfHaddam.jpg');
+    }
 
     .bgvid { 
         background-attachment: fixed;
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
-        min-height: 100%;
+        margin: 0;
+        width: 100%;
+    }
+
+    .animatedBG {
+        animation-name: lightning;
+        animation-duration: 2s;
+        animation-iteration-count: infinite;
     }
 
     .w3-wide {letter-spacing: 10px;}
@@ -53,9 +74,10 @@
 </style>
 
 <body>
-<audio autoplay loop>
+<audio autoplay>
   <source src="images/OpenCountryJoy.mp3" type="audio/mp3">
 </audio>
+
 <!-- First Parallax Image with Title Text -->
 <div class="bgimg-1 w3-display-container w3-opacity-min" id="home">
     <div class="w3-display-middle" style="white-space:nowrap;">
@@ -116,13 +138,13 @@
 </div>
 
 <!--FOUR-->
-<div class="bgimg-2 w3-display-container w3-opacity-min">
+<div class="bgimg-5 w3-display-container w3-opacity-min">
     <div class="w3-display-middle">
        <span class="w3-xxlarge w3-text-light-grey w3-wide">FOUR</span>
    </div>
 </div>
 
-<div class="w3-content w3-container w3-padding-64" id="portfolio">
+<div class="w3-content w3-container w3-padding-64" id="stanza4">
     <h3 class="w3-center">A man and a woman<br>
         Are one.<br>
         A man and a woman and a blackbird<br>
@@ -131,7 +153,7 @@
 </div>
 
 <!--FIVE-->
-<<div class="bgvid w3-display-container w3-opacity-min" id="stanza2bg">
+<div class="bgvid w3-display-container w3-opacity-min" id="stanza5bg">
     <video loop muted autoplay poster="img/videoframe.jpg" class="bgvid">
         <source src="http://thenewcode.com/assets/videos/polina.mp4" type="video/mp4">
     </video>
@@ -140,7 +162,7 @@
    </div>
 </div>
 
-<div class="w3-content w3-container w3-padding-64" id="portfolio">
+<div class="w3-content w3-container w3-padding-64" id="stanza5">
     <h3 class="w3-center">I do not know which to prefer,<br>
         The beauty of inflections<br>
         Or the beauty of innuendoes,<br>
@@ -149,33 +171,41 @@
     </h3>
 </div>
 
-<!--SIX-->
-<!-- <div class="bgimg-3 w3-display-container w3-opacity-min">
+<div class="bgimg-6 w3-display-container w3-opacity-min">
     <div class="w3-display-middle">
-       <span class="w3-xxlarge w3-text-light-grey w3-wide">SIX</span>
+       <span class="w3-xxlarge w3-wide">[just after]</span>
    </div>
 </div>
 
-<div class="w3-content w3-container w3-padding-64" id="portfolio">
-    <h3 class="w3-center">I was of three minds,<br>
-        Like a tree<br>
-        In which there are three blackbirds.<br>
-    </h3>
-</div> -->
+<!--SIX-->
+
+
+<div class="w3-content w3-container w3-padding-64" id="stanza6">
+    <h3 class="w3-center">Icicles filled the long window<br>
+        With barbaric glass.<br>
+        The shadow of the blackbird<br>
+        Crossed it, to and fro.<br>
+        The mood<br>
+        Traced in the shadow<br>
+        An indecipherable cause.<br>
+    </h3> 
+</div>
 
 <!--SEVEN-->
-<!-- <div class="bgimg-3 w3-display-container w3-opacity-min">
+<div class="bgimg-7 w3-display-container w3-opacity-min">
     <div class="w3-display-middle">
        <span class="w3-xxlarge w3-text-light-grey w3-wide">SEVEN</span>
    </div>
 </div>
 
 <div class="w3-content w3-container w3-padding-64" id="portfolio">
-    <h3 class="w3-center">I was of three minds,<br>
-        Like a tree<br>
-        In which there are three blackbirds.<br>
+    <h3 class="w3-center">O thin men of Haddam,<br>
+        Why do you imagine golden birds?<br>
+        Do you not see how the blackbird<br>
+        Walks around the feet<br>
+        Of the women about you?<br>
     </h3>
-</div> -->
+</div>
 
 <!--EIGHT-->
 <!-- <div class="bgimg-3 w3-display-container w3-opacity-min">
@@ -206,18 +236,22 @@
 </div> -->
 
 <!--TEN-->
-<!-- <div class="bgimg-3 w3-display-container w3-opacity-min">
+<div class="bgvid w3-display-container w3-opacity-min" id="stanza10bg">
+    <video loop muted autoplay poster="img/videoframe.jpg" class="bgvid">
+        <source src="images/greenLight.mp4" type="video/mp4">
+    </video>
     <div class="w3-display-middle">
        <span class="w3-xxlarge w3-text-light-grey w3-wide">TEN</span>
    </div>
 </div>
 
-<div class="w3-content w3-container w3-padding-64" id="portfolio">
-    <h3 class="w3-center">I was of three minds,<br>
-        Like a tree<br>
-        In which there are three blackbirds.<br>
+<div class="w3-content w3-container w3-padding-64" id="stanza10">
+    <h3 class="w3-center">At the sight of blackbirds<br>
+        Flying in a green light,<br>
+        Even the bawds of euphony<br>
+        Would cry out sharply.<br>
     </h3>
-</div> -->
+</div>
 
 <!--ELEVEN-->
 <!-- <div class="bgimg-3 w3-display-container w3-opacity-min">
@@ -248,19 +282,31 @@
 </div> -->
 
 <!--THIRTEEN-->
-<!-- <div class="bgimg-3 w3-display-container w3-opacity-min">
+<div class="w3-display-container w3-opacity-min">
+    <img src="images/eveningAllAfternoon.jpg" style="width: 100%">
     <div class="w3-display-middle">
-       <span class="w3-xxlarge w3-text-light-grey w3-wide">THIRTEEN</span>
+        <h3 class="w3-center w3-text-light-grey" style="font-size: 1000%">
+            T<br>
+            H<br>
+            I<br>
+            R<br>
+            T<br>
+            E<br>
+            E<br>
+            N<br>
+        </h3>
    </div>
 </div>
 
-<div class="w3-content w3-container w3-padding-64" id="portfolio">
-    <h3 class="w3-center">I was of three minds,<br>
-        Like a tree<br>
-        In which there are three blackbirds.<br>
-    </h3>
+<div class="w3-content w3-container w3-padding-64">
+    <h3 class="w3-center">It was evening all afternoon.<br>
+            It was snowing<br>
+            And it was going to snow.<br>
+            The blackbird sat<br>
+            In the cedar-limbs.
+        </h3> 
 </div>
- -->
+
 </body>
 </html>
 
