fixed loading screen style

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
         height: 100%;
         z-index: 9999;
         background: url('images/page-loader.gif') 50% 50% no-repeat rgb(249,249,249);
+        background-color: black;
     }
 
     /* Create a Parallax Effect */
@@ -159,6 +160,10 @@
 
 <body>
 <div class="loader w3-padding-64 w3-center" id="greeting">
+    <br>
+    <br>
+    <br>
+    <br>
     <br>
     <br>
     <br>
