added back timing

--- a/index.html
+++ b/index.html
@@ -11,34 +11,34 @@
     $(window).on("load", function () {
         $("#greeting").fadeOut("slow");
         $("#song").get(0).play()
-        // setTimeout(function() {$("#about").scrollBtm();}, 5310);
-        // setTimeout(function() {$("#stanza1bg").scrollView();},10460);
-        // setTimeout(function() {$("#stanza1").scrollBtm();}, 15190);
-        // setTimeout(function() {$("#stanza2bg").scrollView();},19050);
-        // setTimeout(function() {$("#stanza2").scrollBtm();}, 22270);
-        // setTimeout(function() {$("#stanza3bg").scrollView();},28700);
-        // setTimeout(function() {$("#stanza3").scrollBtm();}, 33220);
-        // setTimeout(function() {$("#stanza4bg").scrollView();},38110);
-        // setTimeout(function() {$("#stanza4").scrollBtm();}, 42170);
-        // setTimeout(function() {$("#stanza5bg").scrollView();},48100);
-        // setTimeout(function() {$("#stanza5").scrollBtm();}, 58840);
-        // setTimeout(function() {$("#justafterbg").scrollView();},65500);
-        // setTimeout(function() {$("#secondmovement").scrollViewFast()}, 71900);
-        // setTimeout(function() {$("#stanza6").scrollBtm();}, 74220);
-        // setTimeout(function() {$("#stanza7bg").scrollView();},85630);
-        // setTimeout(function() {$("#stanza7").scrollBtm();}, 89480);
-        // setTimeout(function() {$("#stanza8bg").scrollView();},96630);
-        // setTimeout(function() {$("#stanza8").scrollBtm();}, 102480);
-        // setTimeout(function() {$("#stanza9bg").scrollView();},107630);
-        // setTimeout(function() {$("#stanza9").scrollBtm();}, 110480);
-        // setTimeout(function() {$("#stanza10bg").scrollView();},115630);
-        // setTimeout(function() {$("#stanza10").scrollBtm();}, 123980);
-        // setTimeout(function() {$("#stanza11bg").scrollView();},129130);
-        // setTimeout(function() {$("#stanza11").scrollBtm();}, 134980);
-        // setTimeout(function() {$("#stanza12bg").scrollView();},140130);
-        // setTimeout(function() {$("#stanza12").scrollBtm();}, 146980);
-        // setTimeout(function() {$("#stanza13").scrollBtmSlow();}, 150200);
-        // setTimeout(function() {$("#stanza13").scrollBtmS();}, 152200);
+        setTimeout(function() {$("#about").scrollBtm();}, 5310);
+        setTimeout(function() {$("#stanza1bg").scrollView();},10460);
+        setTimeout(function() {$("#stanza1").scrollBtm();}, 15190);
+        setTimeout(function() {$("#stanza2bg").scrollView();},19050);
+        setTimeout(function() {$("#stanza2").scrollBtm();}, 22270);
+        setTimeout(function() {$("#stanza3bg").scrollView();},28700);
+        setTimeout(function() {$("#stanza3").scrollBtm();}, 33220);
+        setTimeout(function() {$("#stanza4bg").scrollView();},38110);
+        setTimeout(function() {$("#stanza4").scrollBtm();}, 42170);
+        setTimeout(function() {$("#stanza5bg").scrollView();},48100);
+        setTimeout(function() {$("#stanza5").scrollBtm();}, 58840);
+        setTimeout(function() {$("#justafterbg").scrollView();},65500);
+        setTimeout(function() {$("#secondmovement").scrollViewFast()}, 71900);
+        setTimeout(function() {$("#stanza6").scrollBtm();}, 74220);
+        setTimeout(function() {$("#stanza7bg").scrollView();},85630);
+        setTimeout(function() {$("#stanza7").scrollBtm();}, 89480);
+        setTimeout(function() {$("#stanza8bg").scrollView();},96630);
+        setTimeout(function() {$("#stanza8").scrollBtm();}, 102480);
+        setTimeout(function() {$("#stanza9bg").scrollView();},107630);
+        setTimeout(function() {$("#stanza9").scrollBtm();}, 110480);
+        setTimeout(function() {$("#stanza10bg").scrollView();},115630);
+        setTimeout(function() {$("#stanza10").scrollBtm();}, 123980);
+        setTimeout(function() {$("#stanza11bg").scrollView();},129130);
+        setTimeout(function() {$("#stanza11").scrollBtm();}, 134980);
+        setTimeout(function() {$("#stanza12bg").scrollView();},140130);
+        setTimeout(function() {$("#stanza12").scrollBtm();}, 146980);
+        setTimeout(function() {$("#stanza13").scrollBtmSlow();}, 150200);
+        setTimeout(function() {$("#stanza13").scrollBtmS();}, 152200);
     });
 
     $.fn.scrollView = function () {
