--- a/index.html
+++ b/index.html
@@ -23,22 +23,22 @@
         setTimeout(function() {$("#stanza5bg").scrollView();},48100);
         setTimeout(function() {$("#stanza5").scrollBtm();}, 58840);
         setTimeout(function() {$("#justafterbg").scrollView();},65500);
-        setTimeout(function() {$("#secondmovement").scrollViewFast()}, 71900);
-        setTimeout(function() {$("#stanza6").scrollBtm();}, 74220);
-        setTimeout(function() {$("#stanza7bg").scrollView();},85630);
-        setTimeout(function() {$("#stanza7").scrollBtm();}, 89480);
-        setTimeout(function() {$("#stanza8bg").scrollView();},96630);
-        setTimeout(function() {$("#stanza8").scrollBtm();}, 102480);
-        setTimeout(function() {$("#stanza9bg").scrollView();},107630);
-        setTimeout(function() {$("#stanza9").scrollBtm();}, 110480);
-        setTimeout(function() {$("#stanza10bg").scrollView();},115630);
-        setTimeout(function() {$("#stanza10").scrollBtm();}, 123980);
-        setTimeout(function() {$("#stanza11bg").scrollView();},129130);
-        setTimeout(function() {$("#stanza11").scrollBtm();}, 134980);
-        setTimeout(function() {$("#stanza12bg").scrollView();},140130);
-        setTimeout(function() {$("#stanza12").scrollBtm();}, 146980);
-        setTimeout(function() {$("#stanza13").scrollBtmSlow();}, 150200);
-        setTimeout(function() {$("#stanza13").scrollBtmS();}, 152200);
+        setTimeout(function() {$("#secondmovement").scrollViewFast()}, 72100);
+        setTimeout(function() {$("#stanza6").scrollBtm();}, 74420);
+        setTimeout(function() {$("#stanza7bg").scrollView();},85830);
+        setTimeout(function() {$("#stanza7").scrollBtm();}, 89680);
+        setTimeout(function() {$("#stanza8bg").scrollView();},96830);
+        setTimeout(function() {$("#stanza8").scrollBtm();}, 102680);
+        setTimeout(function() {$("#stanza9bg").scrollView();},107830);
+        setTimeout(function() {$("#stanza9").scrollBtm();}, 110680);
+        setTimeout(function() {$("#stanza10bg").scrollView();},115830);
+        setTimeout(function() {$("#stanza10").scrollBtm();}, 124180);
+        setTimeout(function() {$("#stanza11bg").scrollView();},129330);
+        setTimeout(function() {$("#stanza11").scrollBtm();}, 1345180);
+        setTimeout(function() {$("#stanza12bg").scrollView();},140330);
+        setTimeout(function() {$("#stanza12").scrollBtm();}, 147180);
+        setTimeout(function() {$("#stanza13").scrollBtmSlow();}, 150300);
+        setTimeout(function() {$("#stanza13").scrollBtmS();}, 152400);
     });
 
     $.fn.scrollView = function () {
