--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         setTimeout(function() {$("#stanza12bg").scrollView();},140530);
         setTimeout(function() {$("#stanza12").scrollBtm();}, 147380);
         setTimeout(function() {$("#stanza13").scrollBtmSlow();}, 150300);
-        setTimeout(function() {$("#stanza13").scrollBtmS();}, 152400);
+        setTimeout(function() {$("#freescroll").scrollBtm();}, 152400);
     });
 
     $.fn.scrollView = function () {
