--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
         setTimeout(function() {$("#stanza5bg").scrollView();},48100);
         setTimeout(function() {$("#stanza5").scrollBtm();}, 58840);
         setTimeout(function() {$("#justafterbg").scrollView();},65500);
-        setTimeout(function() {$("#secondmovement").scrollViewFast()}, 72300);
+        setTimeout(function() {$("#secondmovement").scrollViewFast()}, 72700);
         setTimeout(function() {$("#stanza6").scrollBtm();}, 74620);
-        setTimeout(function() {$("#stanza7bg").scrollView();},86030);
+        setTimeout(function() {$("#stanza7bg").scrollView();},85630);
         setTimeout(function() {$("#stanza7").scrollBtm();}, 89880);
         setTimeout(function() {$("#stanza8bg").scrollView();},97030);
         setTimeout(function() {$("#stanza8").scrollBtm();}, 102880);
@@ -34,11 +34,11 @@
         setTimeout(function() {$("#stanza10bg").scrollView();},116030);
         setTimeout(function() {$("#stanza10").scrollBtm();}, 124380);
         setTimeout(function() {$("#stanza11bg").scrollView();},129530);
-        setTimeout(function() {$("#stanza11").scrollBtm();}, 1345380);
+        setTimeout(function() {$("#stanza11").scrollBtm();}, 134580);
         setTimeout(function() {$("#stanza12bg").scrollView();},140530);
         setTimeout(function() {$("#stanza12").scrollBtm();}, 147380);
         setTimeout(function() {$("#stanza13").scrollBtmSlow();}, 150300);
-        setTimeout(function() {$("#freescroll").scrollBtm();}, 152400);
+        setTimeout(function() {$("#freescroll").scrollBtm();}, 152300);
     });
 
     $.fn.scrollView = function () {
