fixed typos in about section

--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
 
 <div class="w3-content w3-container w3-padding-64" id="stanza13">
     <p style="margin-left: 3cm; margin-right: 3cm">
-    It is by the following principle that I designed BLACKBIRD.
+    It is by the following principle that I designed BLACKBIRD:
     </p>
     <h3 class="w3-xlarge w3-center" style="margin-bottom: 0cm; margin-left: 3cm; margin-right: 3cm;">
     If it is asked, "What is the content of speech?," it is necessary to say, "It is an actual process of thought, which is in itself nonverbal." An abstract painting represents direct manifestation of creative thought processes as they might appear in computer designs.
@@ -468,7 +468,7 @@
     My performance is bolstered not only by musical and expository (in the form of automatic scrolling) pacing, but also by visual accompaniment. Still and moving images are associated with each stanza of the poem and provide the viewer with my interpretation. They also provide the viewer with raw sensory information that they can respond to and which I have deemed appropriate for the context of poem. This is similar to a reader's gestures and facial expressions during a poetry reading.
     <br>
     <br>
-    An audio recording of someone reading the poem is intentionally left out with the goal of creating a satisfying performance of the text while ignoring the traditional mediums of poem performance. This draws attention to the power of sight and sound and attempts to emphasize McLuhan’s classic point: “The medium is the message.” A viewer may have a simliar to response to BLACKBIRD if the text was completely removed, becuase the raw sensory information is enough to provide an affective experince.
+    An audio recording of someone reading the poem is intentionally left out with the goal of creating a satisfying performance of the text while ignoring the traditional mediums of poem performance. This draws attention to the power of sight and sound and attempts to emphasize McLuhan’s classic point: “The medium is the message.” A viewer may have a simliar response to BLACKBIRD if the text was completely removed, becuase the raw sensory information is enough to provide an affective experince.
 </div>
 
 <div class="w3-row w3-center w3-dark-grey w3-padding-16">
