loading screen format 2

--- a/index.html
+++ b/index.html
@@ -170,9 +170,7 @@
 
 <body>
 <div class="loader w3-padding-64 w3-center" id="greeting">
-    <br>
-    <span class="w3-xxlarge w3-text-light-grey w3-wide">Loading...</span>
-    <br>
+    <span class="w3-xxlarge w3-text-light-grey w3-wide">Loading...
     <br>
     <br>
     <br>
@@ -187,6 +185,9 @@
     <br>
     <br>
     <br>
+    <br>
+    <br>
+    </span>
     <h3 class="w3-center w3-text-light-grey">
         This website scrolls automatically.<br>
         Just sit back and watch.<br>
