--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     $(window).on("load", function () {
         $("#greeting").fadeOut("slow");
         $("#song").get(0).play()
+        $("#home").scrollViewFast();
         setTimeout(function() {$("#about").scrollBtm();}, 5310);
         setTimeout(function() {$("#stanza1bg").scrollView();},10460);
         setTimeout(function() {$("#stanza1").scrollBtm();}, 15190);
