--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 
 
 <div class="w3-content w3-container w3-padding-64" id="stanza3">
-    <h3 class="w3-center">The blackbird whirled in the atumn winds.<br>
+    <h3 class="w3-center">The blackbird whirled in the autumn winds.<br>
         It was a small part of the pantomime.<br>
     </h3>
 </div>
