--- a/index.html
+++ b/index.html
@@ -476,14 +476,14 @@
         FIVE
     </a>
     <br>
-    <a href="http://thenewcode.com/assets/videos/polina.mp4">
+    <a href="http://www.imdb.com/title/tt3460252/">
         ELEVEN
     </a>
     <br>
     <br>
 
     <b>Music</b><br>
-    <a href="http://www.imdb.com/title/tt3460252/">
+    <a href="https://www.youtube.com/watch?v=JtcRdEoGJ_I">
         'Open Country Joy' by Mahavishnu Orchestra<br>
     </a>
     <br>
